--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senac Viagens</title>
     <!-- CSS PERSONALIZADO -->
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="style.css">
 
      <!-- Font Awesome -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
