--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta name="author" content="José Teles">
+    <meta name="author" content="Kaio Amaro">
     <meta name="description" content="Site de viagens">
     <meta name="keywords" content="viagens, barato, ferias, site, responsivo, turismo, website">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Senac Viagens</title>
+    <title>Piu do Job</title>
     <!-- CSS PERSONALIZADO -->
      <link rel="stylesheet" href="style.css">
 
@@ -30,23 +30,23 @@
     <!-- Banner e Calendário -->
 <header>
     <div class="titulo">
-        Explore o mundo!        
+        Coma o cuzinho dele!        
     </div>
 
     <div class="booking">
         <form>
             <div>
-                <label for="destino">Para onde vamos?</label>
+                <label for="destino">Qual seu nome?</label>
                 <input type="text" id="destino">
             </div>
 
             <div>
-                <label for="partida">Quando?</label>
+                <label for="partida">Quando você comer ele?</label>
                 <input type="date" id="partida">
             </div>
 
             <div>
-                <label for="retorno">Retorno</label>
+                <label for="retorno">Até quando você quer comer ele</label>
                 <input type="date" id="retorno">
             </div>
 
@@ -60,7 +60,7 @@
     <!-- Passeios -->
     <section class="passeios" id="passeios">
         <div class="info-passeio"> 
-            <h1>Próximos Passeios & Destinos</h1>
+            <h1>Veja algumas fotos desse safadinho!</h1>
 
             <hr>
             <p>
@@ -87,7 +87,7 @@
 
     <!-- Destinos -->
      <section class="destinos" id="destinos">
-        <h1>Para onde você quer viajar?</h1>
+        <h1>Qual desses pacote você quer pra comer ele?</h1>
 
         <div class="grupo-destinos">
             <!-- Destino 1 -->
