--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Barra de navegação fixa e menu -->
     <nav>
-        <div class="logo">Senac Viagens!</div>
+        <div class="logo">Piu do Job!</div>
         <div class="menu">
             <a href="#">Home</a>
             <a href="#passeios">Passeios</a>
@@ -41,12 +41,12 @@
             </div>
 
             <div>
-                <label for="partida">Quando você comer ele?</label>
+                <label for="partida">Quando você quer comer ele?</label>
                 <input type="date" id="partida">
             </div>
 
             <div>
-                <label for="retorno">Até quando você quer comer ele</label>
+                <label for="retorno">Até quando você quer comer ele?</label>
                 <input type="date" id="retorno">
             </div>
 
