--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
         <div class="fotos-passeios">
             <div class="fotos">
-                <img src="img/travel01.jpg" alt="passeio 1">
+                <img src="img/IMG_20240925_085228_509.webp" alt="passeio 1">
             </div> 
             <div class="fotos">
-                <img src="img/travel02.jpg" alt="passeio 2">
+                <img src="img/Screenshot_20241010-104334.jpg" alt="passeio 2">
             </div> 
             <div class="fotos">
-                <img src="img/travel03.jpg" alt="passeio 3">
+                <img src="img/Screenshot_20241010-104357.jpg" alt="passeio 3">
             </div> 
             <div class="fotos">
-                <img src="img/travel04.jpg" alt="passeio 4">
+                <img src="img/20241010_105413.jpg" alt="passeio 4">
             </div> 
         </div>
     </section>
